--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Based Controls for Autonomous Systems</i>.</p>
 									<p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
-									<p><b>My research is focussed on developing Safe Learning-Based Controls for Autonomous Agents in Safety-Critical Applications</b>.</p>
+									<p><b>My research is focussed on developing Safe and Robust Learning-Based Controllers for Autonomous Systems</b>.</p>
 									
 									<ul class="actions">
 										<li><a href="assets/Resume.pdf" class="button big">RESUME</a></li>
@@ -85,12 +85,11 @@
 									<h2>News</h2>
 								</header>
 									<ul>
-										<li><b>[June 2025]</b> : Presented my <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability at OOD Generalization and Robot Evaluation Workshops at RSS 2025.</li>
+										<li><b>[June 2025]</b> : Presented my <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability at OOD Generalization and Robot Evaluation Workshops at <b>RSS 2025</b>.</li>
 										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on enhancing robot safety via MLLM-based semantic interpretation of failure data is out on arxiv.</li>
 										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
-										<!-- <li><b>[Aug 2024]</b> : Started Ph.D. in Electrical Engineering at University of Southern California (USC).</li> -->
 										<li><b>[July 2024]</b> : New paper on efficient data routing in small-world IoT networks submitted to <b>IEEE ANTS 2024</b>.</li>
 										<li><b>[June 2024]</b> : My <a href="https://www.sciencedirect.com/science/article/pii/S1568494624006173?ref=pdf_download&fr=RR-2&rr=89f67841391f91cd">paper</a> on drone docking on offshore platforms using deep-RL got accepted to <b>Applied Soft Computing Journal</b>.</li>
 										<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <b>ICRA 2024</b> in Yokohama, Japan.</li>
@@ -269,7 +268,7 @@
 										<p>
 											<b>Doctor of Philosophy (Ph.D.) | Aeronautics and Astronautics | January 2025 - Present </b><br>
 											<!-- <i>May 2023 - Present</i> <br> -->
-											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on performing runtime safety monitoring for output-feedback policies in autonomous systems.
+											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on developing safe and robust learning-based controllers for autonomous systems.
 										</p>
 
 										<!-- <h3>University of Southern California</h3>
@@ -382,7 +381,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="projects/small_world_networks/" class="image"><img src="images/btp.png" alt="" /></a>
+											<a href="projects/small_world_networks/" class="image"><img src="images/btp.png" alt="" style="width: 370px;"/></a>
 											<h3>Small World IoT Networks</h3>
 											<p>Enhanced network performance by introducing small-world phenomenon using actor-critic reinforcement learning.</p>
 											<ul class="actions">
