--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 									<p>
 									  <strong>Enhancing Robot Safety via MLLM-Based Semantic Interpretation of Failure Data</strong><br>
 									  <b>Aryaman Gupta*</b>, Yusuf Umut Ciftci*, Somil Bansal<br>
+									  arXiv, 2025<br>
 									  <a href="https://www.arxiv.org/abs/2506.06570" style="color: darkred;">[PDF]</a> 
 									  <a href="https://mllm-failure-clustering.github.io/" style="color: darkred;">[Website]</a> 
 									  <!-- <a href="#" style="color: darkred;">[Video]</a>  -->
