--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</header>
 									<ul>
 										<li><b>[June 2025]</b> : Presented my <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability at OOD Generalization and Robot Evaluation Workshops at <b>RSS 2025</b>.</li>
-										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on enhancing robot safety via MLLM-based semantic interpretation of failure data is out on arxiv.</li>
+										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability is out on arxiv.</li>
 										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
@@ -119,29 +119,15 @@
 
 								<div>
 									<p>
-									  <strong>Enhancing Robot Safety via MLLM-Based Semantic Interpretation of Failure Data</strong><br>
+									  <strong>From Perception Logs to Failure Modes: Language-Driven Semantic Clustering of Failures for Robot Safety</strong><br>
 									  <b>Aryaman Gupta*</b>, Yusuf Umut Ciftci*, Somil Bansal<br>
 									  arXiv, 2025<br>
 									  <a href="https://www.arxiv.org/abs/2506.06570" style="color: darkred;">[PDF]</a> 
 									  <a href="https://mllm-failure-clustering.github.io/" style="color: darkred;">[Website]</a> 
-									  <!-- <a href="#" style="color: darkred;">[Video]</a>  -->
+									  <a href="https://youtu.be/yBJlayqXIic" style="color: darkred;">[Video]</a> 
 									  <a href="https://github.com/mllm-failure-clustering/failure_clustering" style="color: darkred;">[Code]</a>
 									</p>
 								  </div>
-
-								<!-- <div>
-									
-									<h3> Enhancing Robot Safety via MLLM-Based Semantic Interpretation of Failure Data </h3>
-									<p>
-										<b>Aryaman Gupta</b>, Yusuf Umut Ciftci, Somil Bansal<br>
-									</p>
-									<ul class="actions">
-										<li><a href="https://mllm-failure-clustering.github.io/" class="button small">Website</a></li>
-										<li><a href="https://arxiv.org/pdf/2410.21736" class="button small">PDF</a></li>
-										<li><a href="#" class="button small">Video</a></li>
-										<li><a href="https://github.com/mllm-failure-clustering/failure_clustering" class="button small">Code</a></li>
-									</ul>
-								</div> -->
 
 
 								<div>
@@ -300,7 +286,7 @@
 										<p>
 											<b>Research Intern | <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> |</b> May 2023 - August 2024 <br>
 											<!-- <i>May 2023 - Present</i> <br> -->
-											Worked on mitigating system-level failures of vision-based controllers in aircraft taxiing and ground robot navigation tasks using reachability analysis.
+											Worked on mitigating system-level failures of vision-based controllers in aircraft taxiing and ground robot navigation using reachability analysis.
 										</p>
 										<!-- <ul class="actions">
 											<li><a href="failure_mitigation" class="button small">Website</a></li>
