--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								</header>
 									<ul>
 										<li><b>[June 2025]</b> : Presented my <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability at OOD Generalization and Robot Evaluation Workshops at <b>RSS 2025</b>.</li>
-										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based failure interpretability is out on arxiv.</li>
+										<li><b>[June 2025]</b> : New <a href="https://www.arxiv.org/abs/2506.06570">paper</a> on MLLM-based semantic interpretation of robotic failure data is out on arxiv.</li>
 										<li><b>[Jan 2025]</b> : Started Ph.D. in Aeronautics and Astronautics at Stanford University.</li>
 										<li><b>[Oct 2024]</b> : My paper on efficient data routing in small-world IoT networks got accepted into <b>IEEE ANTS 2024</b> and won <b>Best Paper Award</b>.</li>
 										<li><b>[Sept 2024]</b> : New paper on enhancing safety and robustness of vision-based controllers via reachability analysis submitted to <b>IEEE T-RO</b>.</li>
