--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script>
-			function changeImage() {
-				// Replace 'your-hover-image.jpg' with the path to your hover image
-				document.getElementById("hover-image").src = "images/image2.jpg";
-			}
-		
-			function restoreImage() {
-				// Replace 'your-initial-image.jpg' with the path to your initial image
-				document.getElementById("hover-image").src = "images/image3.jpg";
-			}
-		</script>
 	</head>
 	<body class="is-preload">
 
@@ -57,28 +46,27 @@
 								<div class="content">
 									<header>
 										<h1>Hi, I’m Aryaman</h1>
-										<p><b>PhD student at Stanford University and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
+										<!-- <p><b>PhD student at Stanford University and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p> -->
 									</header>
-									<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Based Controls for Autonomous Systems</i>.</p>
-									<p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
+									<p>I am a PhD student at Stanford University in the Department of Aeronautics and Astronautics Engineering. I feel grateful to be advised by <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> in the <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a>. Prior to this, I spent four amazing years at the IIT (BHU) Varanasi pursuing B.Tech. in Electronics Engineering. Check my recent research <a href="assets/Aryaman_Research_Overview.pdf">here</a>.</p>
+									<!-- <p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Based Controls for Autonomous Systems</i>.</p> -->
+									<!-- <p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p> -->
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
-									<p><b>My research is focussed on developing Safe and Robust Learning-Based Controllers for Autonomous Systems</b>.</p>
-									
+									<!-- <p><b>My research is focussed on developing Safe and Robust Learning-Based Controllers for Autonomous Systems</b>.</p> -->
+									<p>My research focuses on learning from deployment-time data to uncover failure patterns in robotic systems for continuous improvement. I aim to: (a) bake safety mechanisms into their design (b) ensure reliable, efficient operation at runtime through lightweight guardrails.</p>
 									<ul class="actions">
 										<li><a href="assets/Resume.pdf" class="button big">RESUME</a></li>
-										<li><a href="assets/Aryaman_Research_Overview.pdf" class="button big">RESEARCH OVERVIEW</a></li>
+										<li><a href="assets/Aryaman_Research_Overview.pdf" class="button big">RESEARCH OVERVIEW</a> </li>
 										<li><a href="https://scholar.google.com/citations?user=AWhTyqwAAAAJ&hl=en&oi=ao" class="button big">Google Scholar</a></li>
 									</ul>
-								</div>
-								<span class="image object">
-									<!-- <img src="images/image.jpeg"/> -->
+							</div>
+							<span class="image object">
+								<!-- <img src="images/image.jpeg"/> -->
 
-									<img id="hover-image" src="images/image3.jpg" alt="Initial Image" onmouseover="changeImage()" onmouseout="restoreImage()">
+								<img id="hover-image" src="images/image3.jpg" alt="Initial Image">
 
-								</span>
-							</section>
-
-
+							</span>
+						</section>
 							<!-- Section -->
 							<section id="news">
 								<header class="major">
