--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<h1>Hi, I’m Aryaman</h1>
 										<!-- <p><b>PhD student at Stanford University and graduate of Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p> -->
 									</header>
-									<p>I am a PhD student at Stanford University in the Department of Aeronautics and Astronautics Engineering. I feel grateful to be advised by <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> in the <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a>. Prior to this, I spent four amazing years at the IIT (BHU) Varanasi pursuing B.Tech. in Electronics Engineering. Check my recent research <a href="assets/Aryaman_Research_Overview.pdf">here</a>.</p>
+									<p>I am a PhD student at Stanford University in the Department of Aeronautics and Astronautics Engineering. I feel grateful to be advised by <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> in the <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a>. Prior to this, I spent four amazing years at IIT (BHU) Varanasi pursuing B.Tech. in Electronics Engineering. Check my recent research <a href="assets/Aryaman_Research_Overview.pdf">here</a>.</p>
 									<!-- <p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on <i>Providing Safety Assurances in Learning-Based Controls for Autonomous Systems</i>.</p> -->
 									<!-- <p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p> -->
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
@@ -477,4 +477,5 @@
 
 	</body>
 </html>
+
 
