--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 									</ul>
 							</div>
 							<span class="image object">
-								<!-- <img src="images/image.jpeg"/> -->
+								<!-- <img src="images/aryaman2.jpg" width="50%"/> -->
 
-								<img id="hover-image" src="images/image3.jpg" alt="Initial Image">
+								<img id="hover-image" src="images/image3.jpg" alt="Initial Image" style="width: 85%;">
 
 							</span>
 						</section>
