--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<!-- <p> I've previously worked with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p> -->
 									<!-- <p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p> -->
 									<!-- <p><b>My research is focussed on developing Safe and Robust Learning-Based Controllers for Autonomous Systems</b>.</p> -->
-									<p>My research focuses on learning from deployment-time data to uncover failure patterns in robotic systems for continuous improvement. I aim to: (a) bake safety mechanisms into their design (b) ensure reliable, efficient operation at runtime through lightweight guardrails.</p>
+									<p>My research focuses on learning from deployment-time data to uncover failure patterns in robotic systems for continuous improvement. I aim to: (a) bake safety mechanisms into their design (b) ensure reliable & efficient operation at runtime through lightweight guardrails.</p>
 									<ul class="actions">
 										<li><a href="assets/Resume.pdf" class="button big">RESUME</a></li>
 										<li><a href="assets/Aryaman_Research_Overview.pdf" class="button big">RESEARCH OVERVIEW</a> </li>
@@ -241,7 +241,7 @@
 										<p>
 											<b>Doctor of Philosophy (Ph.D.) | Aeronautics and Astronautics | January 2025 - Present </b><br>
 											<!-- <i>May 2023 - Present</i> <br> -->
-											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on developing safe and robust learning-based controllers for autonomous systems.
+											Working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">SIA Lab</a> on failure-guided closed-loop learning, lightweight runtime guardrails, and safety alignment of large generalist policies.
 										</p>
 
 										<!-- <h3>University of Southern California</h3>
